# iceaddr

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  TODO.md  TODO.txt  add_placename_data.py  additions.txt  build.sh  build_db.py  build_postcodes.py  placename_additions.txt  pyproject.toml  requirements.txt  setup.py  verify.py
.github/workflows/: codeql-analysis.yml  python-package.yml
iceaddr/: __init__.py  addresses.py  db.py  dist.py  placenames.py  postcodes.py
src/iceaddr/: __init__.py  addresses.py  db.py  dist.py  geo.py  meta.py  municipalities.py  nearest.py  placenames.py  postcodes.py
tests/: test_iceaddr.py
